ci: no more nohup

--- a/ci/templates/helm/helm.gitlab-ci.yml
+++ b/ci/templates/helm/helm.gitlab-ci.yml
@@ -24,7 +24,7 @@
   export RELEASE_NAME
   export KUBE_NAMESPACE
   # configure helm and local tiller
-  nohup sh ./scripts/tiller-start.sh &
+  sh ./scripts/tiller-start.sh &
   . ./scripts/helm-init.sh
   helm version --debug # check to make sure it can connect
 
