--- a/top_speed/src/main/java/com/fintechstudios/ff_virtual_2020/top_speed/BUILD
+++ b/top_speed/src/main/java/com/fintechstudios/ff_virtual_2020/top_speed/BUILD
@@ -1,23 +1,20 @@
 package(default_visibility = ["//visibility:public"])
 
-load("//tools/flink:flink.bzl", "flink_java_binary")
-
 filegroup(
     name = "java-main-srcs",
     srcs = glob(["*.java"]),
 )
 
 # Main application
-flink_java_binary(
+java_binary(
     name = "top_speed",
     srcs = [":java-main-srcs"],
+    deploy_env = ["//:default_flink_deploy_env"],
     main_class = "com.fintechstudios.ff_virtual_2020.top_speed.TopSpeed",
     resources = [
         "//top_speed/src/main/resources:resource_files",
     ],
-    scala_version = "2.11",
     deps = [
-        # local packages
         "@maven//:org_apache_flink_flink_core",
         "@maven//:org_apache_flink_flink_java",
         "@maven//:org_apache_flink_flink_runtime_web_2_11",
